# dukascopy_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml
lib/src/: data_supplier.rs  dukascopy_service.rs  error.rs  lib.rs
lib/test-resources/: 07h_ticks.bi5
src/: data_supplier.rs  lib.rs  tick.rs
test-resources/: 06h_ticks.bi5  08h_ticks.bi5
